переделал мд сцены под граф вью

--- a/scenes/Второе утро на острове.md
+++ b/scenes/Второе утро на острове.md
@@ -7,6 +7,6 @@ text: |
 
 actions:
 - text: Отправиться в джунгли
-  next: otpravilsa_v_jungli_i_nashel_kokosy_i_rodnik
+  next: "[[Отправился в джунгли и нашёл кокосы и родник]]"
 - text: Отправиться в море на поиски трюма
-  next: otpravilsa_v_more_i_pogib_ot_akuli
+  next: "[[Отправился в море и погиб от акулы]]"
