--- a/scenes/Найти в джунглях красные плоды.md
+++ b/scenes/Найти в джунглях красные плоды.md
@@ -4,8 +4,8 @@ text: |
 
 actions: 
 - text: Карабкаться и сорвать плоды
-  next: osmotrelsa_i_sorval_plody
+  next: "[[Осмотрелся и собрал плоды]]"
 - text: Трясти дерево
-  next: poluchil_po_golove_krasnim_plodom
+  next: "[[Получил по голове красным плодом]]"
 - text: Пойти дальше
-  next: poshel_dalshe_i_bil_zadavlen_palmoy
+  next: "[[Пошёл дальше и был задавлен плодом]]"
