--- a/scenes/Начало.md
+++ b/scenes/Начало.md
@@ -1,7 +1,7 @@
 image: start.jpg
 actions: 
-- text: Собрав остатки сил с трудом открыть глаза и приподнять голову чтобы немного осмотреться...
-  next: popitka_otkryt_glaza
+  - text: Собрав остатки сил с трудом открыть глаза и приподнять голову чтобы немного осмотреться...
+    next: "[[Попытка открыть глаза]]"
 text: |
   Сознание возвращается медленно, сквозь густой туман боли.
   
