--- a/scenes/Отправился в джунгли и нашёл кокосы и родник.md
+++ b/scenes/Отправился в джунгли и нашёл кокосы и родник.md
@@ -9,6 +9,6 @@ text: |
   Вы вернулись на берег счастливые и решили попробовать вскрыть один кокос.
 actions: 
 - text: Бить по кокосу камнем
-  next: vskril_kokos_i_nashel_kokosovuyu_vodu
+  next: "[[Вскрыл кокос и нашёл кокосовую воду]]"
 - text: Сбросить кокос с возвышенности
-  next: sbrosil_kokos_i_razbilsa
+  next: "[[Сбросил кокос и разбился]]"
