--- a/scenes/Первое утро на острове.md
+++ b/scenes/Первое утро на острове.md
@@ -5,8 +5,8 @@ text: |
 
 actions: 
 - text: Пойти в джунгли, на поиски воды и пищи
-  next: naiti_v_junglyah_krasnie_plody
+  next: "[[Найти в джунглях красные плоды]]"
 - text: Осмотреть корабль
-  next: osmotr_korablya
+  next: "[[Осмотр корабля]]"
 - text: Развести костёр (требуется трут и хворост)
-  next: razvel_koster
+  next: "[[Развёл костёр]]"
