--- a/scenes/Попытка открыть глаза.md
+++ b/scenes/Попытка открыть глаза.md
@@ -5,7 +5,8 @@ text: |
 
 actions: 
 - text: Сквозь пелену в глазах попытаться осмотреться
-  next: popitka_osmotretsa
+  next:  "[[Попытка осмотреться]]"
+
 state_change:
   thirst: 1
   hunger: 1
