--- a/scenes/Спасся в обломках.md
+++ b/scenes/Спасся в обломках.md
@@ -1,7 +1,7 @@
 image: spassya_v_oblomkah.jpg
 actions: 
 - text: Лечь спать
-  next: pervoe_utro_na_ostrove
+  next: "[[Первое утро на острове]]"
   
 text: |
   Вы перекатываетесь на бок, и первый же рывок вперёд отзывается в теле жгучей болью — песок въедается в ссадины, но жажда и инстинкт выживания сильнее.
