--- a/scenes/Осмотрелся и собрал плоды.md
+++ b/scenes/Осмотрелся и собрал плоды.md
@@ -3,6 +3,6 @@ text: |
   Вашему взору открылись горы, которые были в конце джунглей. Но джунгли оказались очень большими, и чтобы добраться до гор, нужно пересечь все джунгли. Крик в ночи оставлял мысли о том, что на острове могут обитать хищники. Вы слезли с дерева и ступили на рыхлую джунглевую почву.
 actions: 
 - text: Пойти дальше
-  next: poshel_dalshe_i_pogib_v_shvatke_s_tigrom
+  next: "[[Пошел дальше и погиб в схватке с тигром]]"
 - text: Вернуться к берегу
-  next: vernulsya_obratno_i_osmotrel_korabl
+  next: "[[Вернулся обратно и осмотрел корабль]]"
