--- a/scenes/Попытка осмотреться.md
+++ b/scenes/Попытка осмотреться.md
@@ -18,10 +18,10 @@ text: |
 actions: 
 
 - text: Ползти налево, к груде обломков
-  next: spassya_v_oblomkah
+  next: "[[Спасся в обломках]]"
 
 - text: Ползти прямо, к джунглям
-  next: zagrizly_dikie_zveri
+  next: "[[Загрызли дикие звери]]"
 
 - text: Так и ни на что и не решившись, снова потерять сознание от потери сил
-  next: smilo_shtormom_v_okean
+  next: "[[Смыло штормом в океан]]"
